Move routers to dedicated files, rename /test to /debug
